# zklink-circuit-aggregator

./: Cargo.toml  Makefile  README.md  rustfmt.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  typos.yml
src/: crypto_utils.rs  key_manager.rs  lib.rs  padding.rs  params.rs
src/block_aggregation/: aggregation.rs  circuit.rs  crypto_utils.rs  mod.rs  test.rs  test_utils.rs  vks_tree.rs  witness.rs
src/final_aggregation/: aggregation.rs  mod.rs  test.rs  witness.rs
src/oracle_aggregation/: aggregation.rs  mod.rs  test.rs  witness.rs
