[package]
name = "final_aggregation"
version = "0.1.0"
edition = "2021"
authors = ["N Labs Team<nevermore@zklink.org>"]
homepage = "https://zk.link/"
license = "Apache-2.0"
keywords = ["blockchain", "zklink"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advanced_circuit_component = { git = "https://github.com/zkLinkProtocol/advanced-circuit-component.git", branch = "main", features = ["external_testing"]}
cs_derive = { git = "https://github.com/zkLinkProtocol/advanced-circuit-component.git", branch = "main" }
serde = { version = "1.0.193", features = ["derive"] }
derivative = { version = "2.2.0" }
num-traits = "0.2"
once_cell = "1.18.0"
